--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,31 @@
 body {
     margin: 20px;
+    font-style: italic;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    color: darkorange;
 }
 
-avatar {
+.avatar {
     width: 150px;
 }
 
 .card {
-    border: 1px dotted blue;
     padding: 20px;
     display: flex;
+    justify-content: space-around;
+    width: 400px;
+    margin: 0 auto;
+    text-align: center;
+    border-bottom: 3px solid orange;
+    background-color: darkolivegreen;
 }
 
-.border {
-    border: 1px dotted blue;
-}
+
+/*
+change the border
+add border radius
+shuffle the layout
+shadows 
+hover effecs
+animations
+*/
